--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -25,6 +25,12 @@ clean-targets:         # directories to be removed by `dbt clean`
     - "dbt_modules"
 
 
+vars:
+  event_type: activation
+  dbt_learn: learning
+  dbt_analytics: engineering
+
+
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
 
